<resources>
    <string name="app_name">Weather Detailer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_my_location">Get My Location</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="user_name">User Name</string>
    <string name="next">Next</string>
    <string name="sathyan">Sathyan</string>
    <string name="city">City</string>
    <string name="temp">Temperature</string>
    <string name="details">Weather Details</string>
    <string name="user">User :</string>
    <string name="date">Date</string>
    <string name="report">Forecast Report</string>
    <string name="setting">Settings</string>
    <string name="click">switch to change the unit of temperature"</string>
    <string name="celsius">Celsius</string>
    <string name="image_description_climate">Climate Description Image</string>
    <string name="cardview_details">Details</string>
    <string name="cardview_feelslike">Feels Like</string>
    <string name="cardview_wind">Wind</string>
    <string name="cardview_humidity">Humidity</string>
    <string name="cardview_pressure">Pressure</string>
    <string name="button_share">Share</string>
    <string name="description">Description</string>
    <string name="find_place">Find Place</string>
    <string name="no_places_found">No Places Found</string>

</resources>