<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="9dp"
            app:cardElevation="12dp"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName">

                <LinearLayout
                    android:id="@+id/linear_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/linear_first"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:background="@color/oldgold"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                        <TextView
                                            android:id="@+id/report_main_description"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:gravity="center"
                                            android:textStyle="bold"
                                            android:layout_weight="1" />

                                        <TextView
                                            android:id="@+id/report_climate_description"
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:gravity="top|center"/>

                                </LinearLayout>

                                <ImageView
                                    android:id="@+id/report_climate_image"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:layout_gravity="center"
                                    android:src="@mipmap/ic_launcher_profile_round" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_second"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1">

                                        <TextView
                                            android:id="@+id/report_city_temp"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:gravity="center"
                                            android:textSize="35sp"
                                            android:textStyle="bold" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="1"
                                            android:text="@string/cardview_details"
                                            android:gravity="bottom|center"
                                            android:textStyle="bold" />

                                        <View
                                            android:layout_width="match_parent"
                                            android:layout_height="1dp"
                                            android:background="@android:color/holo_green_dark" />

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            android:layout_weight="3"
                                            android:orientation="horizontal">

                                                <LinearLayout
                                                    android:layout_width="0dp"
                                                    android:layout_height="match_parent"
                                                    android:layout_weight="1"
                                                    android:orientation="vertical">

                                                        <TextView
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:text="@string/cardview_feelslike" />

                                                        <TextView
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:text="@string/cardview_wind" />

                                                        <TextView
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:text="@string/cardview_humidity" />

                                                        <TextView
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:text="@string/cardview_pressure" />
                                                </LinearLayout>

                                                <LinearLayout
                                                    android:layout_width="0dp"
                                                    android:layout_height="match_parent"
                                                    android:layout_weight="1"
                                                    android:orientation="vertical">

                                                        <TextView
                                                            android:id="@+id/report_city_feelslike_temp"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:textStyle="bold" />

                                                        <TextView
                                                            android:id="@+id/report_city_wind"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:textStyle="bold" />

                                                        <TextView
                                                            android:id="@+id/report_city_humidity"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:textStyle="bold" />

                                                        <TextView
                                                            android:id="@+id/report_city_pressure"
                                                            android:layout_width="match_parent"
                                                            android:layout_height="0dp"
                                                            android:layout_weight="1"
                                                            android:textStyle="bold" />

                                                </LinearLayout>

                                        </LinearLayout>


                                </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/report_date"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:background="@color/vegasgold" />
                </LinearLayout>

        </androidx.cardview.widget.CardView>


</LinearLayout>